--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Sol B",
+  "author": "Soleil B",
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.21.4",
