--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "mocha": "^10.2.0",
     "prettier": "^2.8.7",
     "supertest": "^6.3.3"
+  },
+  "devDependencies": {
+    "chance": "^1.1.11"
   }
 }
