--- a/.env.Example
+++ b/.env.Example
@@ -1,3 +1,3 @@
 BASE_URL='https://clientbase-server.herokuapp.com'
-EMAIL='your@email.com'
-PASSWORD='qwerty'
+EMAIL='your_email'
+PASSWORD='your_password'
